@@ -106,8 +106,8 @@ func HashrateToString(hr float64) string {
 
 
 func IsIPBlocked(ip4 []byte) bool {
-	// 129.132.230.0/24 - https://bitcointalk.org/index.php?topic=319465.msg3443572#msg3443572
-	if ip4[0]==129 && ip4[1]==132 && ip4[2]==230 {
+	// 129.132.230.70 - 129.132.230.100 - https://bitcointalk.org/index.php?topic=319465.msg3443572#msg3443572
+	if ip4[0]==129 && ip4[1]==132 && ip4[2]==230 && ip4[3]>=70 && ip4[3]<=100 {
 		return true
 	}
 	return false
